--- a/nuno.html
+++ b/nuno.html
@@ -5,6 +5,6 @@
 <body>
     <h1>Nuno</h1>
 	<h3>Viagem ao Japão</h3>
-<img src="imgs/img.jpg" alt="html">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWVykqeUs4Uq7K_WpD3HpzMpKtVXAviYD3AQ&s" alt="html">
 </body>
 </html>
