--- a/Destino.html
+++ b/Destino.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <h1>Los Angeles</h1>
-    <img src="imagem/LA.jpg" alt="html">
+    <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/0b/ee/9b/d6.jpg" alt="html">
 </body>
 </html>
