--- a/nuno.html
+++ b/nuno.html
@@ -3,7 +3,7 @@
     <title>Parceiro</title>
 </head>
 <body>
-    <h1>Nuno MOM>
+    <h1>Nuno MOM</h1>
 	<h3>Viagem ao Japão</h3>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWVykqeUs4Uq7K_WpD3HpzMpKtVXAviYD3AQ&s" alt="html">
 </body>
